change from localhost

--- a/templates/index.html
+++ b/templates/index.html
@@ -2,7 +2,7 @@
    <body>
       <h1> Syahri's Predict Credit Card Upgrade </h1> 
       <h2> Decision Tree Classifier</h2>
-      <form action = "http://127.0.0.1:5000" method="post">
+      <form action="/" method="post">
          <p>Please enter the number of purhases per month</p>
          <p><input type="number" name="purchases"></p>
          <p> Please enter 1 if there is a supplementary card, else 0</p>
